[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
chronoutil = "0.2"
clap = { version = "3.2", features = ["derive"] }
lockfree = "0.5"
dotenv = { version = "0.15.0" }
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "collector",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
